# ConflictLongFront

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
data/: units.json  weapons.json
data/config/: ai_settings.json
data/scenarios/: default_battle.json
data/settings/: user_settings.json
src/: main.cpp
src/core/: AppSettings.cpp  AppSettings.hpp  Application.cpp  Application.hpp  Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  ScopedTimer.hpp  SettingsManager.cpp  SettingsManager.hpp  SimulationDebugSettings.hpp  Time.cpp  Time.hpp
src/render/: CameraController.cpp  CameraController.hpp  DebugOverlayRenderer.cpp  DebugOverlayRenderer.hpp  FogOfWarRenderer.cpp  FogOfWarRenderer.hpp  RenderMode.hpp  Renderer2D.cpp  Renderer2D.hpp  Renderer3D.cpp  Renderer3D.hpp  TerrainRenderer.cpp  TerrainRenderer.hpp  ViewMode.hpp
src/sim/: Components.hpp  DebugDraw.hpp  DetectionSystem.cpp  DetectionSystem.hpp  LineOfSight.cpp  LineOfSight.hpp  ScenarioManager.cpp  ScenarioManager.hpp  Systems.cpp  Systems.hpp  WeaponSystem.cpp  WeaponSystem.hpp  World.cpp  World.hpp
src/sim/ai/: AiSettings.cpp  AiSettings.hpp  TankAIComponent.hpp  TankAISystem.cpp  TankAISystem.hpp
src/sim/components/: CollisionComponent.hpp  ControlModeComponent.hpp  DetectionComponent.hpp  DirectFireGunComponent.hpp  EngagementComponent.hpp  SensorComponent.hpp  TankComponent.hpp  TransformComponent.hpp  VehicleComponent.hpp  WaypointPathComponent.hpp
src/sim/damage/: ArmorComponent.hpp  DamageComponent.hpp  DamageModel.cpp  DamageModel.hpp  PenetrationModel.cpp  PenetrationModel.hpp
src/sim/manual/: ManualMovementSystem.cpp  ManualMovementSystem.hpp
src/sim/physics/: CollisionSystem.cpp  CollisionSystem.hpp  MovementSystem.cpp  MovementSystem.hpp
src/sim/terrain/: Terrain.cpp  Terrain.hpp
src/sim/visibility/: FogOfWarSystem.cpp  FogOfWarSystem.hpp  TeamFogOfWarSystem.cpp  TeamFogOfWarSystem.hpp  VisibilityMask.cpp  VisibilityMask.hpp
src/sim/weapons/: CombatLog.cpp  CombatLog.hpp  ShotEvent.hpp
src/ui/: BattleControlPanel.cpp  BattleControlPanel.hpp  CombatLogPanel.cpp  CombatLogPanel.hpp  DebugUI.cpp  DebugUI.hpp  SelectedUnitPanel.cpp  SelectedUnitPanel.hpp  SimulationDebugPanel.cpp  SimulationDebugPanel.hpp  ViewControlPanel.cpp  ViewControlPanel.hpp
